yaml/istio/aws-istio/product/product-v1.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: productms-deploy
  namespace: shoppingportal-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      name: productms
      zone: prod
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        name: productms
        version: v1
        release: stable
        tier: fe
        zone: prod
        managed-by: m2
    spec:
      containers:
        - name: productms-ctr
          image: metamagicglobal/productms
          imagePullPolicy: Always
          ports:
          - containerPort: 8082
          resources:
            requests:
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /productms/check/live
              port: 8082
            initialDelaySeconds: 15
            periodSeconds: 15
