yaml/istio/aws-istio/product/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productservice
  namespace: shoppingportal-istio
spec:
  selector: 
    name: productms
  ports:
  - protocol: TCP
    targetPort: 8082
    port: 80
    name: http
