yaml/istio/aws-istio/product/product-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shoppingportal-productservice-vs
  namespace: shoppingportal-istio
spec:
  hosts:
  - "*"
  gateways:
  - shoppingportal-gateway
  http:
  - match:
    - headers:
        end-user:
          exact: metamagic
    route:
    - destination:
        host: productservice.shoppingportal-istio.svc.cluster.local
        subset: canary # match v2 only
        port:
          number: 80
  - route: 
    - destination:
        host: productservice.shoppingportal-istio.svc.cluster.local
        subset: stable # match v1 only
        port:
          number: 80
